Alfa modificacion html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <h1>Controlde versiones</h1>
 <h2>Rodrigo Cordoba</h2>
+<h3>Joaquin Fernandes</h3>
 <img src="favicon.ico" alt="">
 </body>
 </html>
