--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <h1>Controlde versiones</h1>
 <h2>Rodrigo Cordoba</h2>
 <h3>Joaquin Fernandes</h3>
+<p >Manuel Garcia, 29/06/2023, 19:29pm</p>
 <img src="favicon.ico" alt="">
 </body>
 </html>
